# Origin

./: .gitignore
Course_project_Race_Simulator/Main_Race_Simulator/: All_terrain_boots.cpp  All_terrain_boots.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Class_For_Air.cpp  Class_For_Air.h  Class_For_Ground.cpp  Class_For_Ground.h  Eagle.cpp  Eagle.h  Flying_carpet.cpp  Flying_carpet.h  Main_Race_Simulator.cpp  Main_Race_Simulator.sln  Main_Race_Simulator.vcxproj  Main_Race_Simulator.vcxproj.filters  Speed_Camel.cpp  Speed_Camel.h
Lesson_1/ConsoleApplication1_Task_1/: ConsoleApplication1_Task_1.sln  in.txt  out.txt
Lesson_10/CMake_Lesson_10_Task_1/: CMakeLists.txt  Source1.cpp
Lesson_10/CMake_Lesson_10_Task_2/: CMakeLists.txt  Equilateral_Triangle.h  Parallelogram.cpp  Quadrilateral.cpp  Rectanglee.cpp  Right_Triangle.h  Triangle.cpp  Triangle.h  main.cpp
Lesson_11/Task_1_Library_Static/: Task_1.cpp  Task_1.h  Task_1_Library_Static.sln  Task_1_Library_Static.vcxproj  Task_1_Library_Static.vcxproj.filters
Lesson_11/Task_2_Library_Dynamic/: Task_2.cpp  Task_2.h  Task_2_Library_Dynamic.sln  Task_2_Library_Dynamic.vcxproj  Task_2_Library_Dynamic.vcxproj.filters
Lesson_11/Task_3_Library_Dynamic_CMake/: CMakeLists.txt  Task_3.cpp  Task_3.h  Task_3_Client.cpp
Lesson_11/Task_5_Library_Dynamic_CMake/: CMakeLists.txt  Equilateral_Triangle.cpp  Equilateral_Triangle.h  Isosceles_Triangle.cpp  Isosceles_Triangle.h  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectanglee.h  Rhombus.h  Right_Triangle.h  Square.h  Task_5_Client.cpp  Triangle.h
(+131 files in other folders)
